src/main/python/dhs2024/compiladoresParser.py
# Generated from /home/alan/dhs/dhs2024/src/main/python/dhs2024/compiladores.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class compiladoresParser ( Parser ):

    grammarFileName = "compiladores.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'''", "'\"'", "';'", "','", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'='", "'++'", "'--'", "'>'", "'>='", "'<='", 
                     "'<'", "'=='", "'&&'", "'&'", "'||'", "'|'", "'^'", 
                     "'<<'", "'>>'", "<INVALID>", "'int'", "'char'", "'float'", 
                     "'bool'", "'double'", "'void'", "'return'", "'while'", 
                     "'for'", "'if'", "'else'" ]

    symbolicNames = [ "<INVALID>", "PA", "PC", "LLA", "LLC", "CA", "CC", 
                      "COMs", "COMd", "PYC", "COMA", "SUMA", "RESTA", "MULT", 
                      "DIV", "MOD", "ASIG", "INCR", "DECR", "MAYOR", "MAYOREQ", 
                      "MENOREQ", "MENOR", "IGUAL", "AND", "ANDsim", "OR", 
                      "ORsim", "POT", "DESPizq", "DESPder", "NUMERO", "INT", 
                      "CHAR", "FLOAT", "BOOLEAN", "DOUBLE", "VOID", "RETURN", 
                      "WHILE", "FOR", "IF", "ELSE", "WS", "ID" ]

    RULE_tipodato = 0
    RULE_opComp = 1
    RULE_programa = 2
    RULE_instrucciones = 3
    RULE_instruccion = 4
    RULE_declaracion = 5
    RULE_declaracionArreglos = 6
    RULE_declAsig = 7
    RULE_prototipoFuncion = 8
    RULE_prototSpyc = 9
    RULE_parFunc = 10
    RULE_funcion = 11
    RULE_callFunction = 12
    RULE_envPar = 13
    RULE_lista_envPar = 14
    RULE_asignacion = 15
    RULE_opal = 16
    RULE_or = 17
    RULE_o = 18
    RULE_and = 19
    RULE_a = 20
    RULE_comp = 21
    RULE_c = 22
    RULE_exp = 23
    RULE_term = 24
    RULE_factor = 25
    RULE_iwhile = 26
    RULE_bloque = 27
    RULE_ifor = 28
    RULE_init = 29
    RULE_cond = 30
    RULE_iter = 31
    RULE_incremento = 32
    RULE_decremento = 33
    RULE_iif = 34
    RULE_ielse = 35

    ruleNames =  [ "tipodato", "opComp", "programa", "instrucciones", "instruccion", 
                   "declaracion", "declaracionArreglos", "declAsig", "prototipoFuncion", 
                   "prototSpyc", "parFunc", "funcion", "callFunction", "envPar", 
                   "lista_envPar", "asignacion", "opal", "or", "o", "and", 
                   "a", "comp", "c", "exp", "term", "factor", "iwhile", 
                   "bloque", "ifor", "init", "cond", "iter", "incremento", 
                   "decremento", "iif", "ielse" ]

    EOF = Token.EOF
    PA=1
    PC=2
    LLA=3
    LLC=4
    CA=5
    CC=6
    COMs=7
    COMd=8
    PYC=9
    COMA=10
    SUMA=11
    RESTA=12
    MULT=13
    DIV=14
    MOD=15
    ASIG=16
    INCR=17
    DECR=18
    MAYOR=19
    MAYOREQ=20
    MENOREQ=21
    MENOR=22
    IGUAL=23
    AND=24
    ANDsim=25
    OR=26
    ORsim=27
    POT=28
    DESPizq=29
    DESPder=30
    NUMERO=31
    INT=32
    CHAR=33
    FLOAT=34
    BOOLEAN=35
    DOUBLE=36
    VOID=37
    RETURN=38
    WHILE=39
    FOR=40
    IF=41
    ELSE=42
    WS=43
    ID=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TipodatoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(compiladoresParser.INT, 0)

        def CHAR(self):
            return self.getToken(compiladoresParser.CHAR, 0)

        def FLOAT(self):
            return self.getToken(compiladoresParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(compiladoresParser.BOOLEAN, 0)

        def DOUBLE(self):
            return self.getToken(compiladoresParser.DOUBLE, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_tipodato

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipodato" ):
                listener.enterTipodato(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipodato" ):
                listener.exitTipodato(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipodato" ):
                return visitor.visitTipodato(self)
            else:
                return visitor.visitChildren(self)




    def tipodato(self):

        localctx = compiladoresParser.TipodatoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tipodato)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 133143986176) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpCompContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUMA(self):
            return self.getToken(compiladoresParser.SUMA, 0)

        def RESTA(self):
            return self.getToken(compiladoresParser.RESTA, 0)

        def MULT(self):
            return self.getToken(compiladoresParser.MULT, 0)

        def DIV(self):
            return self.getToken(compiladoresParser.DIV, 0)

        def MOD(self):
            return self.getToken(compiladoresParser.MOD, 0)

        def ANDsim(self):
            return self.getToken(compiladoresParser.ANDsim, 0)

        def ORsim(self):
            return self.getToken(compiladoresParser.ORsim, 0)

        def POT(self):
            return self.getToken(compiladoresParser.POT, 0)

        def DESPder(self):
            return self.getToken(compiladoresParser.DESPder, 0)

        def DESPizq(self):
            return self.getToken(compiladoresParser.DESPizq, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_opComp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpComp" ):
                listener.enterOpComp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpComp" ):
                listener.exitOpComp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpComp" ):
                return visitor.visitOpComp(self)
            else:
                return visitor.visitChildren(self)




    def opComp(self):

        localctx = compiladoresParser.OpCompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_opComp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2046883840) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def EOF(self):
            return self.getToken(compiladoresParser.EOF, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = compiladoresParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.instrucciones()
            self.state = 77
            self.match(compiladoresParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionContext,0)


        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = compiladoresParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instrucciones)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 18, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.instruccion()
                self.state = 80
                self.instrucciones()
                pass
            elif token in [-1, 4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def declaracionArreglos(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionArreglosContext,0)


        def declAsig(self):
            return self.getTypedRuleContext(compiladoresParser.DeclAsigContext,0)


        def iwhile(self):
            return self.getTypedRuleContext(compiladoresParser.IwhileContext,0)


        def ifor(self):
            return self.getTypedRuleContext(compiladoresParser.IforContext,0)


        def iif(self):
            return self.getTypedRuleContext(compiladoresParser.IifContext,0)


        def ielse(self):
            return self.getTypedRuleContext(compiladoresParser.IelseContext,0)


        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionContext,0)


        def prototipoFuncion(self):
            return self.getTypedRuleContext(compiladoresParser.PrototipoFuncionContext,0)


        def funcion(self):
            return self.getTypedRuleContext(compiladoresParser.FuncionContext,0)


        def RETURN(self):
            return self.getToken(compiladoresParser.RETURN, 0)

        def opal(self):
            return self.getTypedRuleContext(compiladoresParser.OpalContext,0)


        def callFunction(self):
            return self.getTypedRuleContext(compiladoresParser.CallFunctionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = compiladoresParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instruccion)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.declaracion()
                self.state = 86
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.declaracionArreglos()
                self.state = 89
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.declAsig()
                self.state = 92
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.iwhile()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.ifor()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.iif()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 97
                self.ielse()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 98
                self.bloque()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 99
                self.asignacion()
                self.state = 100
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 102
                self.prototipoFuncion()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 103
                self.funcion()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 104
                self.match(compiladoresParser.RETURN)
                self.state = 105
                self.opal()
                self.state = 106
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 108
                self.callFunction()
                self.state = 109
                self.match(compiladoresParser.PYC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipodato(self):
            return self.getTypedRuleContext(compiladoresParser.TipodatoContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.ID)
            else:
                return self.getToken(compiladoresParser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.COMA)
            else:
                return self.getToken(compiladoresParser.COMA, i)

        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = compiladoresParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.tipodato()
            self.state = 114
            self.match(compiladoresParser.ID)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 115
                    self.match(compiladoresParser.COMA)
                    self.state = 116
                    self.match(compiladoresParser.ID) 
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionArreglosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipodato(self):
            return self.getTypedRuleContext(compiladoresParser.TipodatoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def CA(self):
            return self.getToken(compiladoresParser.CA, 0)

        def NUMERO(self):
            return self.getToken(compiladoresParser.NUMERO, 0)

        def CC(self):
            return self.getToken(compiladoresParser.CC, 0)

        def MULT(self):
            return self.getToken(compiladoresParser.MULT, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracionArreglos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionArreglos" ):
                listener.enterDeclaracionArreglos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionArreglos" ):
                listener.exitDeclaracionArreglos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionArreglos" ):
                return visitor.visitDeclaracionArreglos(self)
            else:
                return visitor.visitChildren(self)




    def declaracionArreglos(self):

        localctx = compiladoresParser.DeclaracionArreglosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracionArreglos)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.tipodato()
                self.state = 123
                self.match(compiladoresParser.ID)
                self.state = 124
                self.match(compiladoresParser.CA)
                self.state = 125
                self.match(compiladoresParser.NUMERO)
                self.state = 126
                self.match(compiladoresParser.CC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.tipodato()

                self.state = 129
                self.match(compiladoresParser.MULT)
                self.state = 130
                self.match(compiladoresParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclAsigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionContext,0)


        def ASIG(self):
            return self.getToken(compiladoresParser.ASIG, 0)

        def opal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladoresParser.OpalContext)
            else:
                return self.getTypedRuleContext(compiladoresParser.OpalContext,i)


        def declaracionArreglos(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionArreglosContext,0)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.COMA)
            else:
                return self.getToken(compiladoresParser.COMA, i)

        def LLA(self):
            return self.getToken(compiladoresParser.LLA, 0)

        def NUMERO(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.NUMERO)
            else:
                return self.getToken(compiladoresParser.NUMERO, i)

        def LLC(self):
            return self.getToken(compiladoresParser.LLC, 0)

        def asignacion(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_declAsig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclAsig" ):
                listener.enterDeclAsig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclAsig" ):
                listener.exitDeclAsig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclAsig" ):
                return visitor.visitDeclAsig(self)
            else:
                return visitor.visitChildren(self)




    def declAsig(self):

        localctx = compiladoresParser.DeclAsigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declAsig)
        self._la = 0 # Token type
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.declaracion()
                self.state = 135
                self.match(compiladoresParser.ASIG)
                self.state = 136
                self.opal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.declaracionArreglos()
                self.state = 139
                self.match(compiladoresParser.ASIG)
                self.state = 140
                self.match(compiladoresParser.COMA)
                self.state = 141
                self.opal()
                self.state = 142
                self.match(compiladoresParser.COMA)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.declaracionArreglos()
                self.state = 145
                self.match(compiladoresParser.ASIG)
                self.state = 146
                self.match(compiladoresParser.LLA)
                self.state = 147
                self.match(compiladoresParser.NUMERO)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 148
                    self.match(compiladoresParser.COMA)
                    self.state = 149
                    self.match(compiladoresParser.NUMERO)
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 155
                self.match(compiladoresParser.LLC)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 157
                self.declaracion()
                self.state = 158
                self.match(compiladoresParser.COMA)
                self.state = 159
                self.asignacion()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 160
                    self.match(compiladoresParser.COMA)
                    self.state = 161
                    self.opal()
                    self.state = 166
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 167
                self.declaracion()
                self.state = 168
                self.match(compiladoresParser.ASIG)
                self.state = 169
                self.opal()
                self.state = 170
                self.match(compiladoresParser.COMA)
                self.state = 171
                self.asignacion()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 172
                    self.match(compiladoresParser.COMA)
                    self.state = 173
                    self.opal()
                    self.state = 178
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototipoFuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipodato(self):
            return self.getTypedRuleContext(compiladoresParser.TipodatoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def PA(self):
            return self.getToken(compiladoresParser.PA, 0)

        def PC(self):
            return self.getToken(compiladoresParser.PC, 0)

        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def parFunc(self):
            return self.getTypedRuleContext(compiladoresParser.ParFuncContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_prototipoFuncion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototipoFuncion" ):
                listener.enterPrototipoFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototipoFuncion" ):
                listener.exitPrototipoFuncion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototipoFuncion" ):
                return visitor.visitPrototipoFuncion(self)
            else:
                return visitor.visitChildren(self)




    def prototipoFuncion(self):

        localctx = compiladoresParser.PrototipoFuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_prototipoFuncion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.tipodato()
            self.state = 182
            self.match(compiladoresParser.ID)
            self.state = 183
            self.match(compiladoresParser.PA)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 133143986176) != 0):
                self.state = 184
                self.parFunc()


            self.state = 187
            self.match(compiladoresParser.PC)
            self.state = 188
            self.match(compiladoresParser.PYC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototSpycContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipodato(self):
            return self.getTypedRuleContext(compiladoresParser.TipodatoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def PA(self):
            return self.getToken(compiladoresParser.PA, 0)

        def PC(self):
            return self.getToken(compiladoresParser.PC, 0)

        def parFunc(self):
            return self.getTypedRuleContext(compiladoresParser.ParFuncContext,0)


        def VOID(self):
            return self.getToken(compiladoresParser.VOID, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_prototSpyc
